--- a/index.html
+++ b/index.html
@@ -146,6 +146,21 @@
                 </p>
             </div>
         </div>
+
+        <div class="section-with-boxes">
+            <div class="ease transition bg-white dark:bg-neutral-800 rounded-lg px-6 py-8 ring-1 ring-slate-900/5 shadow-xl m-3 hover:-translate-y-1 duraction-25">
+                <div class="font-medium text-2xl font-size-large dark:text-white">
+                    <span class="mr-2 inline-flex items-center justify-center p-2 bg-black/10 rounded-md">
+                        <svg class="h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true"><img src="./assets/game_controller_icon.svg"></svg>
+                    </span>
+                    PyTorch Neural Network Development
+                </div>
+                <p class="text-slate-500 dark:text-neutral-400 mt-2 text-base">
+                    Intermediate PyTorch user, builds and trains neural nets with foundational elements, handles critical tasks, integrates models into beginner ML projects. Progressively improves skills via hands-on involvement & continual learning.
+                </p>
+            </div>
+        </div>
     </div>
 
     <h1 id="pinned-repositories-section" class="m-8 font-medium text-3xl dark:text-neutral-100">Pinned repositories</h1>
