update: index.html

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     Game Development
                 </div>
                 <p class="text-slate-500 dark:text-neutral-400 mt-2 text-base">
-                    Experience in developing games using PyGame and Moderngl.
+                    Experienced in developing games with PyGame & ModernGL: designs mechanics, implements graphics/audio, enhances performance; versatile across various projects. Expertise contributes significantly to initiatives needing these skillsets.
                 </p>
             </div>
 
@@ -155,7 +155,7 @@
                     PyTorch Neural Network Development
                 </div>
                 <p class="text-slate-500 dark:text-neutral-400 mt-2 text-base">
-                    Intermediate PyTorch user, builds and trains neural nets with foundational elements, handles critical tasks, integrates models into beginner ML projects. Progressively improves skills via hands-on involvement & continual learning.
+                    Building and trainings neural nets with foundational elements, handling critical tasks, integrating models into beginner ML projects. Progressively improving skills via hands-on involvement & continual learning.
                 </p>
             </div>
         </div>
