update: index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     Full-Stack Development
                 </div>
                 <p class="text-slate-500 dark:text-neutral-400 mt-2 text-base">
-                    Experience in developing full-stack applications using FastAPI and Next.js.
+                    Seasoned developer of full-stack apps via FastAPI & Next.js: creates efficient backends, responsive frontends, handles API integration & database management for robust, scalable solutions. Extensive track record showcases ability to excel within FastAPI and Next.js focused projects and teams.
                 </p>
             </div>
 
@@ -142,7 +142,7 @@
                     Game Development
                 </div>
                 <p class="text-slate-500 dark:text-neutral-400 mt-2 text-base">
-                    Experienced in developing games with PyGame & ModernGL: designs mechanics, implements graphics/audio, enhances performance; versatile across various projects. Expertise contributes significantly to initiatives needing these skillsets.
+                    Experienced in developing games with PyGame & ModernGL.
                 </p>
             </div>
 
@@ -179,7 +179,7 @@
                 </div>
             </div>
 
-            <div onclick="window.open('https://github.com/NaviTheCodeboi/vivid', 'blank');" class="ease transition bg-white dark:bg-neutral-800 rounded-lg px-6 py-8 ring-1 ring-slate-900/5 shadow-xl m-3 hover:-translate-y-1 duraction-25">
+            <div onclick="window.open('https://github.com/NaviTheCoderboi/vivid', 'blank');" class="ease transition bg-white dark:bg-neutral-800 rounded-lg px-6 py-8 ring-1 ring-slate-900/5 shadow-xl m-3 hover:-translate-y-1 duraction-25">
                 <div class="font-medium text-2xl font-size-large dark:text-white">
                     Vivid
                 </div>
